syntax = 'proto3';

package product;

service ProductService {
  rpc GetProducts (GetProductsRequest) returns (GetProductsResponse) {}
  rpc GetProduct(GetProductRequest) returns (Product) {}
  rpc CreateProduct(CreateProductRequest) returns (Product) {}
  rpc UpdateProduct(UpdateProductRequest) returns (Product);
}

message Product {
  int32 id = 1;
  int32 vendorId = 2;
  int32 categoryId = 3;
  string productName = 4;
  string description = 5;
  float price = 6;
  int32 stockQuantity = 7;
  string dimensions = 8;
  float weight = 9;
  string createdAt = 10;
  string updatedAt = 11;
  repeated ProductImage imageUrls = 12;
  Vendor vendor = 13;
  Category category = 14;
  repeated OrderItem orderItems = 15;
  repeated Review reviews = 16;
  repeated CartItem cartItems = 17;
}

message ProductImage {
  int32 id = 1;
  string url = 2;
}

message Vendor {
  int32 id = 1;
  string name = 2;
}

message Category {
  int32 id = 1;
  string name = 2;
}

message OrderItem {
  int32 id = 1;
  int32 productId = 2;
  int32 quantity = 3;
}

message Review {
  int32 id = 1;
  int32 productId = 2;
  string reviewText = 3;
  float rating = 4;
}

message CartItem {
  int32 id = 1;
  int32 productId = 2;
  int32 quantity = 3;
}

message GetProductsRequest {
  int32 page = 1;
  int32 limit = 2;
  Category category = 3;
}

message GetProductsResponse {
  int32 status = 1;
  int32 total = 2; 
  repeated Product products = 3;
  repeated string errors = 4;
}

message GetProductRequest {
  int32 id = 1;
}

message CreateProductRequest {
  string name = 1;
  string sku = 2;
  int32 stock = 3;
  double price = 4;
}

message UpdateProductRequest {
  int32 id = 1;
  optional string productName = 2;
  optional string description = 3;
  optional float price = 4;
  optional int32 stockQuantity = 5;
  optional string dimensions = 6;
  optional float weight = 7;
  Category category = 8;
  optional string imageUrls = 9;
  optional Vendor vendor = 10;
}